--- a/src/styles/Works.css
+++ b/src/styles/Works.css
@@ -37,12 +37,12 @@
 .workImg {
     object-fit: cover;
     width: 17rem;
-    margin: 0 0.5rem 0;
+    margin: 0 0.5rem 1rem;
 }
 
 .seeMoreBtn {
     font-size: 1rem;
-    margin: 3rem 0 0;
+    margin: 2rem 0 0;
     padding: 0.75rem 2rem;
     border-radius: 2rem;
     border: none;
